Issue 992 (#1077)
* tests, endpoint, swagger

* pretty

* remove slz
